--- a/libft/libft/Makefile
+++ b/libft/libft/Makefile
@@ -8,6 +8,11 @@ SOURCES = ft_atoi.c\
 		  ft_isascii.c\
 		  ft_isdigit.c\
 			ft_isprint.c\
+			ft_memset.c\
+			ft_memcpy.c\
+			ft_putchar.c\
+			ft_putnbr.c\
+			ft_putstr.c\
 			ft_strcat.c\
 			ft_strchr.c\
 			ft_strcmp.c\
@@ -16,7 +21,9 @@ SOURCES = ft_atoi.c\
 			ft_strncat.c\
 			ft_strncmp.c\
 			ft_strncpy.c\
+			ft_strnstr.c\
 		  ft_strlen.c\
+			ft_strrchr.c\
 			ft_strstr.c\
 		  ft_tolower.c\
 		  ft_toupper.c\
