--- a/libft/libft/Makefile
+++ b/libft/libft/Makefile
@@ -3,24 +3,40 @@ FLAGS = -Wall -Wextra -Werror
 NAME = libft.a
 
 SOURCES = ft_atoi.c\
+			ft_bzero.c\
 		  ft_isalnum.c\
 		  ft_isalpha.c\
 		  ft_isascii.c\
 		  ft_isdigit.c\
 			ft_isprint.c\
+			ft_memalloc.c\
 			ft_memset.c\
 			ft_memcpy.c\
+			ft_memccpy.c\
+			ft_memchr.c\
+			ft_memcmp.c\
+			ft_memdel.c\
+			ft_memmove.c\
 			ft_putchar.c\
+			ft_putchar_fd.c\
+			ft_putendl.c\
+			ft_putendl_fd.c\
 			ft_putnbr.c\
+			ft_putnbr_fd.c\
 			ft_putstr.c\
+			ft_putstr_fd.c\
 			ft_strcat.c\
 			ft_strchr.c\
 			ft_strcmp.c\
 			ft_strcpy.c\
+			ft_strdel.c\
+			ft_strclr.c\
 			ft_strdup.c\
+			ft_strlcat.c\
 			ft_strncat.c\
 			ft_strncmp.c\
 			ft_strncpy.c\
+			ft_strnew.c\
 			ft_strnstr.c\
 		  ft_strlen.c\
 			ft_strrchr.c\
@@ -28,7 +44,7 @@ SOURCES = ft_atoi.c\
 		  ft_tolower.c\
 		  ft_toupper.c\
 
-HEADERS = ft_header.h
+HEADERS = libft.h
 
 OBJECT = $(SOURCES:.c=.o)
 
