--- a/libft/libft/Makefile
+++ b/libft/libft/Makefile
@@ -25,6 +25,9 @@ SOURCES = ft_atoi.c\
 			ft_putnbr_fd.c\
 			ft_putstr.c\
 			ft_putstr_fd.c\
+			ft_strequ.c\
+			ft_striter.c\
+			ft_striteri.c\
 			ft_strcat.c\
 			ft_strchr.c\
 			ft_strcmp.c\
