almost the end before bonus

--- a/libft/libft/Makefile
+++ b/libft/libft/Makefile
@@ -4,6 +4,7 @@ NAME = libft.a
 
 SOURCES = ft_atoi.c\
 			ft_bzero.c\
+		  ft_itoa.c\
 		  ft_isalnum.c\
 		  ft_isalpha.c\
 		  ft_isascii.c\
@@ -28,6 +29,7 @@ SOURCES = ft_atoi.c\
 			ft_strequ.c\
 			ft_striter.c\
 			ft_striteri.c\
+			ft_strjoin.c\
 			ft_strcat.c\
 			ft_strchr.c\
 			ft_strcmp.c\
@@ -36,14 +38,20 @@ SOURCES = ft_atoi.c\
 			ft_strclr.c\
 			ft_strdup.c\
 			ft_strlcat.c\
+			ft_strmap.c\
+			ft_strmapi.c\
 			ft_strncat.c\
 			ft_strncmp.c\
 			ft_strncpy.c\
+			ft_strnequ.c\
 			ft_strnew.c\
 			ft_strnstr.c\
 		  ft_strlen.c\
 			ft_strrchr.c\
+			ft_strsplit.c\
 			ft_strstr.c\
+			ft_strsub.c\
+			ft_strtrim.c\
 		  ft_tolower.c\
 		  ft_toupper.c\
 
