--- a/libft/libft/Makefile
+++ b/libft/libft/Makefile
@@ -10,6 +10,9 @@ SOURCES = ft_atoi.c\
 		  ft_isascii.c\
 		  ft_isdigit.c\
 			ft_isprint.c\
+			ft_lstdel.c\
+			ft_lstdelone.c\
+			ft_lstnew.c\
 			ft_memalloc.c\
 			ft_memset.c\
 			ft_memcpy.c\
