--- a/42_docker_1/02_bonus/04.node-app/docker-compose.yml
+++ b/42_docker_1/02_bonus/04.node-app/docker-compose.yml
@@ -1,28 +1,31 @@
 version: "3.7"
 networks:
-  nodeapp:
+  nodewebapp:
     ipam:
       driver: default
+      config:
+        - subnet: 172.33.0.0/16
 services:
   mongodb:
     image: mongo:latest
     networks:
-      nodeapp:
+      nodewebapp:
+        ipv4_address: 172.33.0.2
     environment:
       - MONGO_INITDB_ROOT_USERNAME=qvan-der
       - MONGO_INITDB_ROOT_PASSWORD=635241
       - MONGO_INITDB_DATABASE=nodeapp
-    volumes:
-      - ./mongodb:/data/db
     ports:
       - "1336:27017"
   backend:
     build:
       context: ./backend
       dockerfile: Dockerfile
-    image: sailsjs:latest
+    environment:
+      - MACHINE_IP
     networks:
-      nodeapp:
+      nodewebapp:
+        ipv4_address: 172.33.0.3
     volumes:
       - ./backend:/app
     command : bash -c "npm install && node app.js"
@@ -33,10 +36,11 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     networks:
-      nodeapp:
+      nodewebapp:
+        ipv4_address: 172.33.0.4
     environment:
-      - VUE_APP_BASE_URL=http://192.168.99.100:1338/
-      - VUE_APP_API_URL=http://192.168.99.100:1337/
+      - VUE_APP_BASE_URL=http://${MACHINE_IP}:1338/
+      - VUE_APP_API_URL=http://${MACHINE_IP}:1337/
     volumes:
       - ./frontend:/app
     command : bash -c "npm install && npm run serve"
